--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
   </p>
 
   <div class="media-block">
-    <h3>T Gros D1 resnet50 (vidéo .mp4)</h3>
+    <h3>T Gros D1 resnet50 </h3>
     <video controls>
-      <source src="https://drive.google.com/file/d/1HT3kBDuFM7ktp-Lr-HEpj8ij_pEXyomY/view" type="video/mp4">
+      <source src="https://drive.google.com/uc?export=view&id=1HT3kBDuFM7ktp-Lr-HEpj8ij_pEXyomY" type="video/mp4">
       Votre navigateur ne supporte pas la lecture de vidéos.
     </video>
   </div>
 
   <div class="media-block">
-    <h3>T Gros D1 (vidéo .mov)</h3>
+    <h3>T Gros D1 </h3>
     <video controls>
       <source src="https://drive.google.com/uc?export=view&id=1PLxC0draSRE9VdYbhWs4ZmuVCrnXqHyN" type="video/quicktime">
       Votre navigateur ne supporte pas la lecture de vidéos.
