--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
 
   <div class="media-block">
     <h3>T Gros D1 </h3>
-    <video controls>
-      <source src="https://drive.google.com/uc?export=view&id=1PLxC0draSRE9VdYbhWs4ZmuVCrnXqHyN" type="video/quicktime">
-      Votre navigateur ne supporte pas la lecture de vidéos.
-    </video>
+    <iframe width="560" height="315"
+  src="https://youtu.be/LwBwNEe4znM"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen>
+</iframe>
   </div>
 
   <div class="media-block">
@@ -74,7 +77,7 @@
 
   <div class="media-block">
     <h3>NG</h3>
-    <img src="https://drive.google.com/uc?export=view&id=1H47qWXvlCELZxGGT6BLPDSRONFNHAsha" alt="NG">
+    <img src="trajectoires_anim_NG" alt="NG">
   </div>
 
   <div class="media-block">
