--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="media-block">
     <h3>T Gros D1 </h3>
     <iframe width="560" height="315"
-  src="https://youtu.be/LwBwNEe4znM"
+  src="https://www.youtube.com/embed/LwBwNEe4znM"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
