--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <div class="media-block">
     <h3>NG</h3>
-    <img src="trajectoires_anim_NG.gif" alt="NG">
+    <img src="videos-poster-JDD2025/trajectoires_anim_NP.gif" alt="NG">
   </div>
 
   <div class="media-block">
