--- a/index.html
+++ b/index.html
@@ -72,32 +72,32 @@
 
   <div class="media-block">
     <h3>TG</h3>
-    <img src="https://drive.google.com/uc?export=view&id=1lNmndTn9eEZto2q0PCXGuH66Ki0unEBa" alt="TG">
+    <img src="videos-poster-JDD2025/trajectoires_anim_TG.gif" alt="TG">
   </div>
 
   <div class="media-block">
     <h3>NG</h3>
-    <img src="videos-poster-JDD2025/trajectoires_anim_NP.gif" alt="NG">
+    <img src="videos-poster-JDD2025/trajectoires_anim_NG.gif" alt="NG">
   </div>
 
   <div class="media-block">
     <h3>PG</h3>
-    <img src="https://drive.google.com/uc?export=view&id=1oJ9hmHdv0BQL2JWqppS57TBGycdDrQbD" alt="PG">
+    <img src="videos-poster-JDD2025/trajectoires_anim_PG.gif" alt="PG">
   </div>
 
   <div class="media-block">
     <h3>TP</h3>
-    <img src="https://drive.google.com/uc?export=view&id=1RGRtB04wzpd8Yla02WzZ3AnbYGGLLOvt" alt="TP">
+    <img src="videos-poster-JDD2025/trajectoires_anim_TP.gif" alt="TP">
   </div>
 
   <div class="media-block">
     <h3>PP</h3>
-    <img src="https://drive.google.com/uc?export=view&id=1AgwNpVSd8n8dSWA_cdWDzRy60ROTlLD1" alt="PP">
+    <img src="videos-poster-JDD2025/trajectoires_anim_PP.gif" alt="PP">
   </div>
 
   <div class="media-block">
     <h3>NP</h3>
-    <img src="https://drive.google.com/uc?export=view&id=1bAnwTEFzL6RUbTPwcuB8sQXV0xGdXc6f" alt="NP">
+    <img src="videos-poster-JDD2025/trajectoires_anim_NP.gif" alt="NP">
   </div>
 </body>
 </html>
