--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <div class="media-block">
     <h3>NP</h3>
-    <img src="videos-poster-JDD2025/trajectoires_anim_NP.gif" alt="NP">
+    <img src="trajectoires_anim_NP.gif.gif" alt="NP">
   </div>
 </body>
 </html>
