--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
 
   <div class="media-block">
     <h3>TG</h3>
-    <img src="videos-poster-JDD2025/trajectoires_anim_TG.gif" alt="TG">
+    <img src="trajectoires_anim_TG.gif" alt="TG">
   </div>
 
   <div class="media-block">
     <h3>NG</h3>
-    <img src="videos-poster-JDD2025/trajectoires_anim_NG.gif" alt="NG">
+    <img src="trajectoires_anim_NG.gif" alt="NG">
   </div>
 
   <div class="media-block">
     <h3>PG</h3>
-    <img src="videos-poster-JDD2025/trajectoires_anim_PG.gif" alt="PG">
+    <img src="trajectoires_anim_PG.gif" alt="PG">
   </div>
 
   <div class="media-block">
     <h3>TP</h3>
-    <img src="videos-poster-JDD2025/trajectoires_anim_TP.gif" alt="TP">
+    <img src="trajectoires_anim_TP.gif" alt="TP">
   </div>
 
   <div class="media-block">
     <h3>PP</h3>
-    <img src="videos-poster-JDD2025/trajectoires_anim_PP.gif" alt="PP">
+    <img src="trajectoires_anim_PP.gif" alt="PP">
   </div>
 
   <div class="media-block">
