--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
 
   <div class="media-block">
     <h3>T Gros D1 resnet50 </h3>
-    <video controls>
-      <source src="https://drive.google.com/uc?export=view&id=1HT3kBDuFM7ktp-Lr-HEpj8ij_pEXyomY" type="video/mp4">
-      Votre navigateur ne supporte pas la lecture de vidéos.
-    </video>
+        <iframe width="560" height="315"
+  src="https://www.youtube.com/embed/H96iR-1TSys"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen>
+</iframe>
   </div>
 
   <div class="media-block">
