--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </p>
 
   <div class="media-block">
-    <h3>T Gros D1 resnet50 </h3>
+    <h3>Un oursin juvénile avant analyse - Exemple </h3>
         <iframe width="560" height="315"
   src="https://www.youtube.com/embed/H96iR-1TSys"
   title="YouTube video player"
@@ -63,7 +63,7 @@
   </div>
 
   <div class="media-block">
-    <h3>T Gros D1 </h3>
+    <h3>Un oursin juvénile dont la trajectoire a été modélisée - Exemple</h3>
     <iframe width="560" height="315"
   src="https://www.youtube.com/embed/LwBwNEe4znM"
   title="YouTube video player"
