--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </iframe>
   </div>
 
-<div style="display: flex; justify-content: center; gap: 20px;">
+<div class="media-block" style="display: flex; justify-content: center; gap: 20px;">
   <h3>Trajectoires des gros juvéniles (1,5 - 2 cm)</h3>
   <img src="trajectoires_anim_PG.gif" alt="Traitement 1" width="250">
   <img src="trajectoires_anim_NG.gif" alt="Traitement 2" width="250">
