--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
 </iframe>
   </div>
 
-<div class="media-block" style="display: flex; justify-content: center; gap: 20px;">
-  <h3>Trajectoires des gros juvéniles (1,5 - 2 cm)</h3>
-  <img src="trajectoires_anim_PG.gif" alt="Traitement 1" width="250">
-  <img src="trajectoires_anim_NG.gif" alt="Traitement 2" width="250">
+<div class="media-block"  style="text-align: center; padding: 20px;">
+  <h3>Trajectoires des gros juvéniles (1,5 - 2 cm) selon les traitements</h3>
+  <div style="display: flex; justify-content: center; gap: 2px;">
+  <img src="trajectoires_anim_NG.gif" alt="Traitement 1" width="250">
+  <img src="trajectoires_anim_PG.gif" alt="Traitement 2" width="250">
   <img src="trajectoires_anim_TG.gif" alt="Traitement 3" width="250">
 </div>
   
