--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
   <img src="trajectoires_anim_TG.gif" alt="Traitement 3" width="300">
   </div>
 </div>  
+
+<div class="media-block"  style="text-align: center; padding: 20px;">
+  <h3>Trajectoires des petits juvéniles (0,5 - 1 cm) selon les traitements</h3>
+  <div style="display: flex; justify-content: center; gap: 0px;">
+  <img src="trajectoires_anim_NP.gif" alt="Traitement 1" width="300">
+  <img src="trajectoires_anim_PP.gif" alt="Traitement 2" width="300">
+  <img src="trajectoires_anim_TP.gif" alt="Traitement 3" width="300">
+  </div>
+</div>  
+  
   <div class="media-block">
     <h3>TG</h3>
     <img src="trajectoires_anim_TG.gif" alt="TG">
