--- a/index.html
+++ b/index.html
@@ -76,9 +76,18 @@
 <div class="media-block"  style="text-align: center; padding: 20px;">
   <h4>Trajectoires des gros juvéniles (1,5 - 2 cm) selon les traitements</h4>
   <div style="display: flex; justify-content: center; gap: 0px;">
-  <img src="trajectoires_anim_NG.gif" alt="Traitement 1" width="300">
-  <img src="trajectoires_anim_PG.gif" alt="Traitement 2" width="300">
-  <img src="trajectoires_anim_TG.gif" alt="Traitement 3" width="300">
+     <div>
+      <img src="trajectoires_anim_NG.gif" alt="Nourriture" width="300">
+      <p>Nourriture</p>
+    </div>
+    <div>
+      <img src="trajectoires_anim_PG.gif" alt="Prédateur" width="300">
+      <p>Prédateur</p>
+    </div>
+    <div>
+      <img src="trajectoires_anim_TG.gif" alt="Control" width="300">
+      <p>Control</p>
+    </div>
   </div>
 </div>  
 
