--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     Léa Piacentini, Ornella Rey Serra, Mikael Demolliens, Jean-José Filippi, Vanina Pasqualini, Sonia Ternengo
   </p>
 
-  <div class="media-block">
-    <h3>Un oursin juvénile avant analyse - Exemple </h3>
+  <div class="media-block" style="text-align: center;">
+    <h3>Un oursin juvénile avant analyse </h3>
         <iframe width="560" height="315"
   src="https://www.youtube.com/embed/H96iR-1TSys"
   title="YouTube video player"
@@ -60,10 +60,10 @@
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen>
 </iframe>
-  </div>
 
-  <div class="media-block">
-    <h3>Un oursin juvénile dont la trajectoire a été modélisée - Exemple</h3>
+
+
+    <h3>Un oursin juvénile dont la trajectoire a été modélisée </h3>
     <iframe width="560" height="315"
   src="https://www.youtube.com/embed/LwBwNEe4znM"
   title="YouTube video player"
