--- a/index.html
+++ b/index.html
@@ -94,40 +94,20 @@
 <div class="media-block"  style="text-align: center; padding: 20px;">
   <h3>Trajectoires des petits juvéniles (0,5 - 1 cm) selon les traitements</h3>
   <div style="display: flex; justify-content: center; gap: 0px;">
-  <img src="trajectoires_anim_NP.gif" alt="Traitement 1" width="300">
-  <img src="trajectoires_anim_PP.gif" alt="Traitement 2" width="300">
-  <img src="trajectoires_anim_TP.gif" alt="Traitement 3" width="300">
-  </div>
+     <div>
+      <img src="trajectoires_anim_NP.gif" alt="Nourriture" width="300">
+      <p>Nourriture</p>
+    </div>
+    <div>
+      <img src="trajectoires_anim_PP.gif" alt="Prédateur" width="300">
+      <p>Prédateur</p>
+    </div>
+    <div>
+      <img src="trajectoires_anim_TP.gif" alt="Control" width="300">
+      <p>Control</p>
+    </div>
 </div>  
   
-  <div class="media-block">
-    <h3>TG</h3>
-    <img src="trajectoires_anim_TG.gif" alt="TG">
-  </div>
 
-  <div class="media-block">
-    <h3>NG</h3>
-    <img src="trajectoires_anim_NG.gif" alt="NG">
-  </div>
-
-  <div class="media-block">
-    <h3>PG</h3>
-    <img src="trajectoires_anim_PG.gif" alt="PG">
-  </div>
-
-  <div class="media-block">
-    <h3>TP</h3>
-    <img src="trajectoires_anim_TP.gif" alt="TP">
-  </div>
-
-  <div class="media-block">
-    <h3>PP</h3>
-    <img src="trajectoires_anim_PP.gif" alt="PP">
-  </div>
-
-  <div class="media-block">
-    <h3>NP</h3>
-    <img src="trajectoires_anim_NP.gif" alt="NP">
-  </div>
 </body>
 </html>
