--- a/index.html
+++ b/index.html
@@ -106,8 +106,28 @@
       <img src="trajectoires_anim_TP.gif" alt="Control" width="300">
       <p>Control</p>
     </div>
-</div>  
-  
+ </div>  
+  <div class="media-block" style="text-align: center;">
+    <h3>Un premier modèle multi-individus en cours d'entraînement</h3>
+        <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/Fqisg6RnbLI"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+        </iframe>  
+  </div> 
+  <div class="media-block" style="text-align: center;">
+    <h3>En bonus... Nos petits juvéniles relâchés par les plongeurs de STELLA MARE !</h3>
+        <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/m6YeD7gfyS8"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+        </iframe>  
+   </div> 
 
+  
 </body>
 </html>
